--- a/README
+++ b/README
@@ -2,3 +2,4 @@ java-graph2012
 =============================================
 Git repository for revised Java graph library
 started 11/23/2012
+Note: The library is currently not thread safe!
